v0.5.x/_sources/reference/fury.utils.rst.txt
.. AUTO-GENERATED FILE -- DO NOT EDIT!

:mod:`utils`
============
.. automodule:: fury.utils

.. currentmodule:: fury.utils
.. autosummary::

   apply_affine
   asbytes
   change_vertices_order
   compute_bounds
   fix_winding_order
   get_actor_from_polydata
   get_actor_from_polymapper
   get_actor_from_primitive
   get_bounding_box_sizes
   get_bounds
   get_grid_cells_position
   get_polydata_colors
   get_polydata_lines
   get_polydata_normals
   get_polydata_triangles
   get_polydata_vertices
   get_polymapper_from_polydata
   line_colors
   lines_to_vtk_polydata
   map_coordinates
   map_coordinates_3d_4d
   normalize_v3
   normals_from_v_f
   numpy_to_vtk_colors
   numpy_to_vtk_matrix
   numpy_to_vtk_points
   repeat_sources
   rgb_to_vtk
   rotate
   set_input
   set_polydata_colors
   set_polydata_normals
   set_polydata_triangles
   set_polydata_vertices
   shallow_copy
   triangle_order
   update_actor
   update_polydata_normals
   vertices_from_actor
   vtk_matrix_to_numpy


.. currentmodule:: fury.utils

apply_affine
~~~~~~~~~~~~

.. autofunction:: apply_affine

asbytes
~~~~~~~

.. autofunction:: asbytes

change_vertices_order
~~~~~~~~~~~~~~~~~~~~~

.. autofunction:: change_vertices_order

compute_bounds
~~~~~~~~~~~~~~

.. autofunction:: compute_bounds

fix_winding_order
~~~~~~~~~~~~~~~~~

.. autofunction:: fix_winding_order

get_actor_from_polydata
~~~~~~~~~~~~~~~~~~~~~~~

.. autofunction:: get_actor_from_polydata

get_actor_from_polymapper
~~~~~~~~~~~~~~~~~~~~~~~~~

.. autofunction:: get_actor_from_polymapper

get_actor_from_primitive
~~~~~~~~~~~~~~~~~~~~~~~~

.. autofunction:: get_actor_from_primitive

get_bounding_box_sizes
~~~~~~~~~~~~~~~~~~~~~~

.. autofunction:: get_bounding_box_sizes

get_bounds
~~~~~~~~~~

.. autofunction:: get_bounds

get_grid_cells_position
~~~~~~~~~~~~~~~~~~~~~~~

.. autofunction:: get_grid_cells_position

get_polydata_colors
~~~~~~~~~~~~~~~~~~~

.. autofunction:: get_polydata_colors

get_polydata_lines
~~~~~~~~~~~~~~~~~~

.. autofunction:: get_polydata_lines

get_polydata_normals
~~~~~~~~~~~~~~~~~~~~

.. autofunction:: get_polydata_normals

get_polydata_triangles
~~~~~~~~~~~~~~~~~~~~~~

.. autofunction:: get_polydata_triangles

get_polydata_vertices
~~~~~~~~~~~~~~~~~~~~~

.. autofunction:: get_polydata_vertices

get_polymapper_from_polydata
~~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. autofunction:: get_polymapper_from_polydata

line_colors
~~~~~~~~~~~

.. autofunction:: line_colors

lines_to_vtk_polydata
~~~~~~~~~~~~~~~~~~~~~

.. autofunction:: lines_to_vtk_polydata

map_coordinates
~~~~~~~~~~~~~~~

.. autofunction:: map_coordinates

map_coordinates_3d_4d
~~~~~~~~~~~~~~~~~~~~~

.. autofunction:: map_coordinates_3d_4d

normalize_v3
~~~~~~~~~~~~

.. autofunction:: normalize_v3

normals_from_v_f
~~~~~~~~~~~~~~~~

.. autofunction:: normals_from_v_f

numpy_to_vtk_colors
~~~~~~~~~~~~~~~~~~~

.. autofunction:: numpy_to_vtk_colors

numpy_to_vtk_matrix
~~~~~~~~~~~~~~~~~~~

.. autofunction:: numpy_to_vtk_matrix

numpy_to_vtk_points
~~~~~~~~~~~~~~~~~~~

.. autofunction:: numpy_to_vtk_points

repeat_sources
~~~~~~~~~~~~~~

.. autofunction:: repeat_sources

rgb_to_vtk
~~~~~~~~~~

.. autofunction:: rgb_to_vtk

rotate
~~~~~~

.. autofunction:: rotate

set_input
~~~~~~~~~

.. autofunction:: set_input

set_polydata_colors
~~~~~~~~~~~~~~~~~~~

.. autofunction:: set_polydata_colors

set_polydata_normals
~~~~~~~~~~~~~~~~~~~~

.. autofunction:: set_polydata_normals

set_polydata_triangles
~~~~~~~~~~~~~~~~~~~~~~

.. autofunction:: set_polydata_triangles

set_polydata_vertices
~~~~~~~~~~~~~~~~~~~~~

.. autofunction:: set_polydata_vertices

shallow_copy
~~~~~~~~~~~~

.. autofunction:: shallow_copy

triangle_order
~~~~~~~~~~~~~~

.. autofunction:: triangle_order

update_actor
~~~~~~~~~~~~

.. autofunction:: update_actor

update_polydata_normals
~~~~~~~~~~~~~~~~~~~~~~~

.. autofunction:: update_polydata_normals

vertices_from_actor
~~~~~~~~~~~~~~~~~~~

.. autofunction:: vertices_from_actor

vtk_matrix_to_numpy
~~~~~~~~~~~~~~~~~~~

.. autofunction:: vtk_matrix_to_numpy

