v0.8.0/_sources/reference/fury.utils.rst.txt
.. AUTO-GENERATED FILE -- DO NOT EDIT!

:mod:`utils`
============
.. automodule:: fury.utils

.. currentmodule:: fury.utils
.. autosummary::

   Actor
   AlgorithmOutput
   CellArray
   Glyph3D
   IdTypeArray
   ImageData
   Matrix3x3
   Matrix4x4
   Points
   PolyData
   PolyDataMapper
   PolyDataNormals
   Transform
   TransformPolyDataFilter
   add_polydata_numeric_field
   apply_affine
   apply_affine_to_actor
   array_from_actor
   asbytes
   change_vertices_order
   colors_from_actor
   compute_bounds
   fix_winding_order
   get_actor_from_polydata
   get_actor_from_polymapper
   get_actor_from_primitive
   get_bounding_box_sizes
   get_bounds
   get_grid_cells_position
   get_polydata_colors
   get_polydata_field
   get_polydata_lines
   get_polydata_normals
   get_polydata_tangents
   get_polydata_triangles
   get_polydata_vertices
   get_polymapper_from_polydata
   line_colors
   lines_to_vtk_polydata
   map_coordinates
   map_coordinates_3d_4d
   normalize_v3
   normals_from_actor
   normals_from_v_f
   normals_to_actor
   numpy_to_vtk_cells
   numpy_to_vtk_colors
   numpy_to_vtk_image_data
   numpy_to_vtk_matrix
   numpy_to_vtk_points
   remove_observer_from_actor
   repeat_sources
   rgb_to_vtk
   rotate
   set_input
   set_polydata_colors
   set_polydata_normals
   set_polydata_tangents
   set_polydata_triangles
   set_polydata_vertices
   shallow_copy
   tangents_from_actor
   tangents_from_direction_of_anisotropy
   tangents_to_actor
   triangle_order
   update_actor
   update_polydata_normals
   update_surface_actor_colors
   vertices_from_actor
   vtk_matrix_to_numpy


.. currentmodule:: fury.utils


:class:`Actor`
~~~~~~~~~~~~~~


.. autoclass:: Actor
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__


:class:`AlgorithmOutput`
~~~~~~~~~~~~~~~~~~~~~~~~


.. autoclass:: AlgorithmOutput
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__


:class:`CellArray`
~~~~~~~~~~~~~~~~~~


.. autoclass:: CellArray
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__


:class:`Glyph3D`
~~~~~~~~~~~~~~~~


.. autoclass:: Glyph3D
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__


:class:`IdTypeArray`
~~~~~~~~~~~~~~~~~~~~


.. autoclass:: IdTypeArray
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__


:class:`ImageData`
~~~~~~~~~~~~~~~~~~


.. autoclass:: ImageData
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__


:class:`Matrix3x3`
~~~~~~~~~~~~~~~~~~


.. autoclass:: Matrix3x3
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__


:class:`Matrix4x4`
~~~~~~~~~~~~~~~~~~


.. autoclass:: Matrix4x4
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__


:class:`Points`
~~~~~~~~~~~~~~~


.. autoclass:: Points
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__


:class:`PolyData`
~~~~~~~~~~~~~~~~~


.. autoclass:: PolyData
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__


:class:`PolyDataMapper`
~~~~~~~~~~~~~~~~~~~~~~~


.. autoclass:: PolyDataMapper
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__


:class:`PolyDataNormals`
~~~~~~~~~~~~~~~~~~~~~~~~


.. autoclass:: PolyDataNormals
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__


:class:`Transform`
~~~~~~~~~~~~~~~~~~


.. autoclass:: Transform
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__


:class:`TransformPolyDataFilter`
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~


.. autoclass:: TransformPolyDataFilter
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__

add_polydata_numeric_field
~~~~~~~~~~~~~~~~~~~~~~~~~~

.. autofunction:: add_polydata_numeric_field

apply_affine
~~~~~~~~~~~~

.. autofunction:: apply_affine

apply_affine_to_actor
~~~~~~~~~~~~~~~~~~~~~

.. autofunction:: apply_affine_to_actor

array_from_actor
~~~~~~~~~~~~~~~~

.. autofunction:: array_from_actor

asbytes
~~~~~~~

.. autofunction:: asbytes

change_vertices_order
~~~~~~~~~~~~~~~~~~~~~

.. autofunction:: change_vertices_order

colors_from_actor
~~~~~~~~~~~~~~~~~

.. autofunction:: colors_from_actor

compute_bounds
~~~~~~~~~~~~~~

.. autofunction:: compute_bounds

fix_winding_order
~~~~~~~~~~~~~~~~~

.. autofunction:: fix_winding_order

get_actor_from_polydata
~~~~~~~~~~~~~~~~~~~~~~~

.. autofunction:: get_actor_from_polydata

get_actor_from_polymapper
~~~~~~~~~~~~~~~~~~~~~~~~~

.. autofunction:: get_actor_from_polymapper

get_actor_from_primitive
~~~~~~~~~~~~~~~~~~~~~~~~

.. autofunction:: get_actor_from_primitive

get_bounding_box_sizes
~~~~~~~~~~~~~~~~~~~~~~

.. autofunction:: get_bounding_box_sizes

get_bounds
~~~~~~~~~~

.. autofunction:: get_bounds

get_grid_cells_position
~~~~~~~~~~~~~~~~~~~~~~~

.. autofunction:: get_grid_cells_position

get_polydata_colors
~~~~~~~~~~~~~~~~~~~

.. autofunction:: get_polydata_colors

get_polydata_field
~~~~~~~~~~~~~~~~~~

.. autofunction:: get_polydata_field

get_polydata_lines
~~~~~~~~~~~~~~~~~~

.. autofunction:: get_polydata_lines

get_polydata_normals
~~~~~~~~~~~~~~~~~~~~

.. autofunction:: get_polydata_normals

get_polydata_tangents
~~~~~~~~~~~~~~~~~~~~~

.. autofunction:: get_polydata_tangents

get_polydata_triangles
~~~~~~~~~~~~~~~~~~~~~~

.. autofunction:: get_polydata_triangles

get_polydata_vertices
~~~~~~~~~~~~~~~~~~~~~

.. autofunction:: get_polydata_vertices

get_polymapper_from_polydata
~~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. autofunction:: get_polymapper_from_polydata

line_colors
~~~~~~~~~~~

.. autofunction:: line_colors

lines_to_vtk_polydata
~~~~~~~~~~~~~~~~~~~~~

.. autofunction:: lines_to_vtk_polydata

map_coordinates
~~~~~~~~~~~~~~~

.. autofunction:: map_coordinates

map_coordinates_3d_4d
~~~~~~~~~~~~~~~~~~~~~

.. autofunction:: map_coordinates_3d_4d

normalize_v3
~~~~~~~~~~~~

.. autofunction:: normalize_v3

normals_from_actor
~~~~~~~~~~~~~~~~~~

.. autofunction:: normals_from_actor

normals_from_v_f
~~~~~~~~~~~~~~~~

.. autofunction:: normals_from_v_f

normals_to_actor
~~~~~~~~~~~~~~~~

.. autofunction:: normals_to_actor

numpy_to_vtk_cells
~~~~~~~~~~~~~~~~~~

.. autofunction:: numpy_to_vtk_cells

numpy_to_vtk_colors
~~~~~~~~~~~~~~~~~~~

.. autofunction:: numpy_to_vtk_colors

numpy_to_vtk_image_data
~~~~~~~~~~~~~~~~~~~~~~~

.. autofunction:: numpy_to_vtk_image_data

numpy_to_vtk_matrix
~~~~~~~~~~~~~~~~~~~

.. autofunction:: numpy_to_vtk_matrix

numpy_to_vtk_points
~~~~~~~~~~~~~~~~~~~

.. autofunction:: numpy_to_vtk_points

remove_observer_from_actor
~~~~~~~~~~~~~~~~~~~~~~~~~~

.. autofunction:: remove_observer_from_actor

repeat_sources
~~~~~~~~~~~~~~

.. autofunction:: repeat_sources

rgb_to_vtk
~~~~~~~~~~

.. autofunction:: rgb_to_vtk

rotate
~~~~~~

.. autofunction:: rotate

set_input
~~~~~~~~~

.. autofunction:: set_input

set_polydata_colors
~~~~~~~~~~~~~~~~~~~

.. autofunction:: set_polydata_colors

set_polydata_normals
~~~~~~~~~~~~~~~~~~~~

.. autofunction:: set_polydata_normals

set_polydata_tangents
~~~~~~~~~~~~~~~~~~~~~

.. autofunction:: set_polydata_tangents

set_polydata_triangles
~~~~~~~~~~~~~~~~~~~~~~

.. autofunction:: set_polydata_triangles

set_polydata_vertices
~~~~~~~~~~~~~~~~~~~~~

.. autofunction:: set_polydata_vertices

shallow_copy
~~~~~~~~~~~~

.. autofunction:: shallow_copy

tangents_from_actor
~~~~~~~~~~~~~~~~~~~

.. autofunction:: tangents_from_actor

tangents_from_direction_of_anisotropy
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. autofunction:: tangents_from_direction_of_anisotropy

tangents_to_actor
~~~~~~~~~~~~~~~~~

.. autofunction:: tangents_to_actor

triangle_order
~~~~~~~~~~~~~~

.. autofunction:: triangle_order

update_actor
~~~~~~~~~~~~

.. autofunction:: update_actor

update_polydata_normals
~~~~~~~~~~~~~~~~~~~~~~~

.. autofunction:: update_polydata_normals

update_surface_actor_colors
~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. autofunction:: update_surface_actor_colors

vertices_from_actor
~~~~~~~~~~~~~~~~~~~

.. autofunction:: vertices_from_actor

vtk_matrix_to_numpy
~~~~~~~~~~~~~~~~~~~

.. autofunction:: vtk_matrix_to_numpy

